[tool.poetry]
name = "error_pie"
version = "0.1.3"
description = ""
authors = ["CharlesAverill <charlesaverill20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
